--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "serve": "^11.0.2"
   },
   "dependencies": {
-    "date-fns": "^1.30.1"
+    "three": "^0.119.1"
   },
   "scripts": {
     "build": "rollup -c",
